# wizard-clean

./: .gitattributes  Cargo.toml  alpaca_evol_instruct_70k.json
src/: main.rs
